; ModuleID = '/home/carl/AnghaBench/linux/drivers/ipack/carriers/extr_tpci200.c_tpci200_disable_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ipack/carriers/extr_tpci200.c_tpci200_disable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tpci200_board = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

@TPCI200_INT0_EN = common dso_local global i32 0, align 4
@TPCI200_INT1_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tpci200_board*, i32)* @tpci200_disable_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tpci200_disable_irq(%struct.tpci200_board* %0, i32 %1) #0 {
  %3 = alloca %struct.tpci200_board*, align 8
  %4 = alloca i32, align 4
  store %struct.tpci200_board* %0, %struct.tpci200_board** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.tpci200_board*, %struct.tpci200_board** %3, align 8
  %6 = load %struct.tpci200_board*, %struct.tpci200_board** %3, align 8
  %7 = getelementptr inbounds %struct.tpci200_board, %struct.tpci200_board* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* @TPCI200_INT0_EN, align 4
  %17 = load i32, i32* @TPCI200_INT1_EN, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @tpci200_clear_mask(%struct.tpci200_board* %5, i32* %15, i32 %18)
  ret void
}

declare dso_local i32 @tpci200_clear_mask(%struct.tpci200_board*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
